<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/dsp_settings_headset">

	<PreferenceCategory android:title="@string/pref_fx_master_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.enable"
			android:summaryOn="@string/pref_fx_master_summary_on" android:summaryOff="@string/pref_fx_master_summary_off"
			android:disableDependentsState="false" android:title="@string/pref_dsp_enable"></CheckBoxPreference>
		<CheckBoxPreference android:key="viper4android.global.forceenable.enable"
			android:disableDependentsState="false" android:title="@string/pref_force_enable_text"></CheckBoxPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_playback_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.playbackgain.enable"
			android:summaryOn="@string/pref_playback_summary_on" android:summaryOff="@string/pref_playback_summary_off"
			android:disableDependentsState="false" android:title="@string/pref_dsp_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/playbackgain_ratio" android:dialogTitle="@string/dialog_effect" android:key="viper4android.headphonefx.playbackgain.ratio" android:defaultValue="50" android:title="@string/pref_effect_title" android:entryValues="@array/playbackgain_ratio_values"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_equalizer_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.fireq.enable" android:summaryOn="@string/pref_equalizer_summary_on"
			android:summaryOff="@string/pref_equalizer_summary_off" android:title="@string/pref_equalizer_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/equalizer_preset_modes"
			android:dialogTitle="@string/pref_equalizer_preset_title"
			android:key="viper4android.headphonefx.fireq"
			android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;"
			android:title="@string/pref_equalizer_preset_title"
			android:entryValues="@array/equalizer_preset_values"/>
		<com.vipercn.viper4android_v2.preference.EqualizerPreference android:key="viper4android.headphonefx.fireq.custom"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_vhs_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.vhs.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_vhs_summary_on"
			android:summaryOff="@string/pref_vhs_summary_off" android:title="@string/pref_curesystem_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/dialog_vhs_qual" android:entries="@array/vhs_qual" android:entryValues="@array/vhs_qual_values" android:title="@string/pref_select_vhs_qual_title" android:key="viper4android.headphonefx.vhs.qual"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_fidelity_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.fidelity.bass.enable"
			android:summaryOn="@string/pref_fidelity_vb_summary_on"
			android:summaryOff="@string/pref_fidelity_vb_summary_off"
			android:title="@string/pref_fidelity_vb_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vbass_boost"
			android:entryValues="@array/vbass_boost_values"
			android:title="@string/pref_fidelity_vb_bassgain_title"
			android:dialogTitle="@string/pref_fidelity_vb_bassgain"
			android:key="viper4android.headphonefx.fidelity.bass.gain"
			android:defaultValue="50"/>
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.fidelity.clarity.enable"
			android:summaryOn="@string/pref_fidelity_vc_summary_on"
			android:summaryOff="@string/pref_fidelity_vc_summary_off"
			android:title="@string/pref_fidelity_vc_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vclarity_boost"
			android:entryValues="@array/vclarity_boost_values"
			android:title="@string/pref_fidelity_vc_bassgain_title"
			android:dialogTitle="@string/pref_fidelity_vc_bassgain"
			android:key="viper4android.headphonefx.fidelity.clarity.gain"
			android:defaultValue="50"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_curesystem_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.cure.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_curesystem_summary_on"
			android:summaryOff="@string/pref_curesystem_summary_off" android:title="@string/pref_curesystem_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/dialog_cure_crossfeed" android:entries="@array/cure_crossfeed" android:entryValues="@array/cure_crossfeed_values" android:title="@string/pref_select_cure_cf_title" android:key="viper4android.headphonefx.cure.crossfeed"/>
	</PreferenceCategory>

</PreferenceScreen>
