<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/dsp_settings_bluetooth">

	<PreferenceCategory android:title="@string/pref_fx_master_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.enable"
			android:summaryOn="@string/pref_fx_master_summary_on" android:summaryOff="@string/pref_fx_master_summary_off"
			android:disableDependentsState="false" android:title="@string/pref_dsp_enable"></CheckBoxPreference>
		<CheckBoxPreference android:key="viper4android.global.forceenable.enable"
			android:disableDependentsState="false" android:title="@string/pref_force_enable_text"></CheckBoxPreference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_playback_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.playbackgain.enable"
			android:summaryOn="@string/pref_playback_summary_on" android:summaryOff="@string/pref_playback_summary_off"
			android:disableDependentsState="false" android:title="@string/pref_dsp_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/playbackgain_ratio" android:dialogTitle="@string/dialog_effect" android:key="viper4android.headphonefx.playbackgain.ratio" android:defaultValue="50" android:title="@string/pref_effect_title" android:entryValues="@array/playbackgain_ratio_values"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/multi_factor" android:dialogTitle="@string/dialog_effect" android:key="viper4android.headphonefx.playbackgain.maxscaler" android:defaultValue="400" android:title="@string/pref_playback_maxgain" android:entryValues="@array/multi_factor_values"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/output_db" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphonefx.playbackgain.volume" android:defaultValue="80" android:title="@string/pref_playback_output_threshold" android:entryValues="@array/output_db_values"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_equalizer_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.fireq.enable" android:summaryOn="@string/pref_equalizer_summary_on"
			android:summaryOff="@string/pref_equalizer_summary_off" android:title="@string/pref_equalizer_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/equalizer_preset_modes"
			android:dialogTitle="@string/pref_equalizer_preset_title"
			android:key="viper4android.headphonefx.fireq"
			android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;"
			android:title="@string/pref_equalizer_preset_title"
			android:entryValues="@array/equalizer_preset_values"/>
		<com.vipercn.viper4android_v2.preference.EqualizerPreference android:key="viper4android.headphonefx.fireq.custom"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_convolver_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.convolver.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_convolver_summary_on"
			android:summaryOff="@string/pref_convolver_summary_off" android:title="@string/pref_convolver_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreferenceWithCustom
			android:defaultValue="" android:dialogTitle="@string/pref_convolver_knl_title" android:title="@string/pref_convolver_knl" android:key="viper4android.headphonefx.convolver.kernel"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/pref_convolver_crosschannel_title" android:entries="@array/conv_cross_channel" android:entryValues="@array/conv_cross_channel_values" android:title="@string/pref_convolver_crosschannel" android:key="viper4android.headphonefx.convolver.crosschannel"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_colorfulmusic_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.colorfulmusic.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_colorfulmusic_summary_on"
			android:summaryOff="@string/pref_colorfulmusic_summary_off" android:title="@string/pref_colorfulmusic_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="120;200" android:dialogTitle="@string/dialog_colorfulmusic" android:entries="@array/colorfulmusic_coeffs" android:entryValues="@array/colorfulmusic_coeffs_values" android:title="@string/pref_select_colorfulmusic_title" android:key="viper4android.headphonefx.colorfulmusic.coeffs"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="150" android:dialogTitle="@string/dialog_colorfulmusic_mi" android:entries="@array/colorfulmusic_midimage" android:entryValues="@array/colorfulmusic_midimage_values" android:title="@string/pref_select_colorfulmusic_mi_title" android:key="viper4android.headphonefx.colorfulmusic.midimage"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_diffsurr_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.diffsurr.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_diffsurr_summary_on"
			android:summaryOff="@string/pref_diffsurr_summary_off" android:title="@string/pref_diffsurr_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="500" android:dialogTitle="@string/dialog_diffsurr_ms" android:entries="@array/diffsurround_delay" android:entryValues="@array/diffsurround_delay_values" android:title="@string/pref_select_diffsurr_ms_title" android:key="viper4android.headphonefx.diffsurr.delay"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_vhs_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.vhs.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_vhs_summary_on"
			android:summaryOff="@string/pref_vhs_summary_off" android:title="@string/pref_curesystem_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/dialog_vhs_qual" android:entries="@array/vhs_qual" android:entryValues="@array/vhs_qual_values" android:title="@string/pref_select_vhs_qual_title" android:key="viper4android.headphonefx.vhs.qual"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_reverb_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.reverb.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_reverb_summary_on"
			android:summaryOff="@string/pref_reverb_summary_off" android:title="@string/pref_reverb_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entries="@array/reverb_roomsize" android:entryValues="@array/reverb_roomsize_values" android:title="@string/pref_reverb_roomsize" android:key="viper4android.headphonefx.reverb.roomsize"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entries="@array/reverb_roomwidth" android:entryValues="@array/reverb_roomwidth_values" android:title="@string/pref_reverb_width" android:key="viper4android.headphonefx.reverb.roomwidth"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entries="@array/reverb_percent" android:entryValues="@array/reverb_percent_values" android:title="@string/pref_reverb_damp" android:key="viper4android.headphonefx.reverb.damp"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entries="@array/reverb_percent" android:entryValues="@array/reverb_percent_values" android:title="@string/pref_reverb_wet" android:key="viper4android.headphonefx.reverb.wet"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="50" android:dialogTitle="@string/pref_effect_title" android:entries="@array/reverb_percent" android:entryValues="@array/reverb_percent_values" android:title="@string/pref_reverb_dry" android:key="viper4android.headphonefx.reverb.dry"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_dynamicsystem_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.dynamicsystem.enable"
			android:summaryOn="@string/pref_dynamicsystem_summary_on"
			android:summaryOff="@string/pref_dynamicsystem_summary_off"
			android:title="@string/pref_dynamicsystem_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/dynamicsystem_outputs"
			android:dialogTitle="@string/pref_dynamicsystem_output"
			android:key="viper4android.headphonefx.dynamicsystem.coeffs"
			android:defaultValue="100;5600;40;80;50;50"
			android:title="@string/pref_dynamicsystem_output_title"
			android:entryValues="@array/dynamicsystem_outputs_values"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/dynamicsystem_bass"
			android:dialogTitle="@string/dialog_effect"
			android:key="viper4android.headphonefx.dynamicsystem.bass"
			android:defaultValue="0"
			android:title="@string/pref_dynamicsystem_bass"
			android:entryValues="@array/dynamicsystem_bass_values"/>
		<CheckBoxPreference android:key="viper4android.headphonefx.dynamicsystem.tube" android:summaryOff="@string/pref_dynamicsystem_tube_summary_off" android:summaryOn="@string/pref_dynamicsystem_tube_summary_on" android:disableDependentsState="false" android:title="@string/pref_dynamicsystem_tube_title"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_fidelity_title">
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.fidelity.bass.enable"
			android:summaryOn="@string/pref_fidelity_vb_summary_on"
			android:summaryOff="@string/pref_fidelity_vb_summary_off"
			android:title="@string/pref_fidelity_vb_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vbass_mode"
			android:entryValues="@array/vbass_mode_values"
			android:title="@string/pref_fidelity_vb_mode_title"
			android:dialogTitle="@string/pref_fidelity_vb_mode"
			android:key="viper4android.headphonefx.fidelity.bass.mode"
			android:defaultValue="0"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vbass_freq"
			android:entryValues="@array/vbass_freq_values"
			android:title="@string/pref_fidelity_vb_bassfreq_title"
			android:dialogTitle="@string/pref_fidelity_vb_bassfreq"
			android:key="viper4android.headphonefx.fidelity.bass.freq"
			android:defaultValue="40"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vbass_boost"
			android:entryValues="@array/vbass_boost_values"
			android:title="@string/pref_fidelity_vb_bassgain_title"
			android:dialogTitle="@string/pref_fidelity_vb_bassgain"
			android:key="viper4android.headphonefx.fidelity.bass.gain"
			android:defaultValue="50"/>
		<CheckBoxPreference android:disableDependentsState="false"
			android:key="viper4android.headphonefx.fidelity.clarity.enable"
			android:summaryOn="@string/pref_fidelity_vc_summary_on"
			android:summaryOff="@string/pref_fidelity_vc_summary_off"
			android:title="@string/pref_fidelity_vc_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vclarity_mode"
			android:entryValues="@array/vclarity_mode_values"
			android:title="@string/pref_fidelity_vc_mode_title"
			android:dialogTitle="@string/pref_fidelity_vc_mode"
			android:key="viper4android.headphonefx.fidelity.clarity.mode"
			android:defaultValue="0"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/vclarity_boost"
			android:entryValues="@array/vclarity_boost_values"
			android:title="@string/pref_fidelity_vc_bassgain_title"
			android:dialogTitle="@string/pref_fidelity_vc_bassgain"
			android:key="viper4android.headphonefx.fidelity.clarity.gain"
			android:defaultValue="50"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_curesystem_title">
		<CheckBoxPreference android:key="viper4android.headphonefx.cure.enable"
			android:disableDependentsState="false" android:summaryOn="@string/pref_curesystem_summary_on"
			android:summaryOff="@string/pref_curesystem_summary_off" android:title="@string/pref_curesystem_enable"></CheckBoxPreference>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:defaultValue="0" android:dialogTitle="@string/dialog_cure_crossfeed" android:entries="@array/cure_crossfeed" android:entryValues="@array/cure_crossfeed_values" android:title="@string/pref_select_cure_cf_title" android:key="viper4android.headphonefx.cure.crossfeed"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_fx_limiter_title">
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/output_volume" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphonefx.outvol" android:defaultValue="100" android:title="@string/pref_output_gain" android:entryValues="@array/output_volume_values"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/channel_pan" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphonefx.channelpan" android:defaultValue="0" android:title="@string/pref_output_pan" android:entryValues="@array/channel_pan_values"/>
		<com.vipercn.viper4android_v2.preference.SummariedListPreference
			android:entries="@array/output_db" android:dialogTitle="@string/pref_effect_title" android:key="viper4android.headphonefx.limiter" android:defaultValue="100" android:title="@string/pref_fx_limiter_threshold" android:entryValues="@array/output_db_values"/>
	</PreferenceCategory>

</PreferenceScreen>
